--- a/develop/assets/css/style.css
+++ b/develop/assets/css/style.css
@@ -40,7 +40,7 @@ header div {
 header h1 {
   font-weight: bold;
   margin: 0 15px;
-  font-size: 36px;
+  font-size: 38px;
   color: var(--header-color);
 }
 
@@ -94,7 +94,7 @@ header nav ul li a:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 20px 55px;
+  margin: 20px 100px;
   width: 320px;
   height: 55px;
   background-color: var(--secondary-color);
@@ -104,6 +104,46 @@ header nav ul li a:hover {
   color: var(--header-color);
   font-size: 34px;
 }
+/* hero end */
+
+/* main start */
+.main-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 25px 100px 25px 135px;
+
+  /* margin: 0 auto; */
+}
+
+.section-title {
+  text-align: right;
+  padding-right: 15px;
+}
+
+.section-title h2 {
+  color: var(--text-color);
+  font-weight: bold;
+  font-size: 48px;
+}
+
+.main-content {
+  border-left: 3px solid var(--text-color);
+  padding-left: 30px;
+}
+
+.content p {
+  line-height: 1.5;
+  color: var(--text-color);
+}
+
+/* about me start */
 
 
 
