--- a/develop/assets/css/style.css
+++ b/develop/assets/css/style.css
@@ -32,18 +32,23 @@ header {
 
 header div {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-end;
+  justify-content: flex-start;
+  align-items: center;
   margin: 10px 0 20px;
-  width: 420px;
+  width: 430px;
   height: 55px;
   background-color: var(--secondary-color);
 }
 
+header div img {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  border: 2px solid var(--header-color);
+}
+
 header h1 {
   font-weight: bold;
-  margin: 0 15px;
   font-size: 38px;
   color: var(--header-color);
 }
@@ -67,7 +72,6 @@ header nav ul li a {
   border-bottom: 3px solid;
   margin: 0 6px;
   color: var(--secondary-color);
-
 }
 
 header nav ul li a:hover {
@@ -104,6 +108,11 @@ header nav ul li a:hover {
 }
 /* hero end */
 
+/* about me */
+#about-me img {
+  display: none;
+}
+
 /* work section start */
 .main-section {
   background-color: var(--primary-color);
@@ -139,7 +148,6 @@ header nav ul li a:hover {
   border-left: 3px solid var(--text-color);
   padding-left: 30px;
   flex: 1;
-
 }
 
 .content p {
@@ -178,14 +186,12 @@ article > div:first-of-type {
   min-width: 280px;
   height: 300px;
   overflow: hidden;
-  
 }
 
-article div > img:first-of-type {
+article div a > img:first-of-type {
   width: 100%;
   height: auto;
   opacity: 0.75;
-
 }
 
 article img:first-of-type:hover {
@@ -231,6 +237,10 @@ article h4 {
   border-bottom: 3px solid;
   margin: 0 0px;
   color: var(--text-color);
+}
+
+.footer-menu ul li a:hover {
+  color: rgb(10, 10, 10)
 }
 /* contact me section end */
 
@@ -280,8 +290,13 @@ article h4 {
   header div {
     width: 420px;
     height: 45px;
+    justify-content: center;
     align-items: center;
     margin-bottom: 0;
+  }
+
+  header div img {
+    display: none;
   }
 
   header h1 {
@@ -308,6 +323,15 @@ article h4 {
     font-size: 24px;
   }
 
+  #about-me img {
+    display: block;
+    margin-bottom: 30px;
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
+    border: 5px solid var(--header-color);
+  }
+
   .content {
     display: block;
     margin-top: 50px;
@@ -325,11 +349,14 @@ article h4 {
     border-bottom: 3px solid;
     margin: 0 auto 35px auto;
     width: 50%;
+
   }
 
   /* delete break line in titles */
   .section-title br {
     content:" ";
+    display: none;
+
   }
 
   .section-title br:after {
@@ -365,14 +392,14 @@ article h4 {
   }
 
   .section-title h2 {
-    font-size: 32px;
+    font-size: 34px;
   }
 
   .article-detail {
     width: 100%;
   }
 
-  /* no hover on finger driven devices */
+  /* no hover on images for finger driven devices */
   article img {
     opacity: 1;
   }
