--- a/develop/assets/css/style.css
+++ b/develop/assets/css/style.css
@@ -304,7 +304,7 @@ article h4 {
   }
 
   header nav {
-    margin: 12px 60px 25px 60px;
+    margin: 12px 30px 25px 30px;
   }
 
   header nav ul li a {
@@ -384,6 +384,7 @@ article h4 {
     width: 280px;
     height: 35px;
     margin-bottom: 10px;
+    margin-right: 0;
   }
 
   .hero div h2 {
@@ -397,6 +398,8 @@ article h4 {
   .content p {
     line-height: 1.5;
     font-size: 19px;
+    text-align: justify;
+    text-justify: inter-word;
   }
 
   .section-title h2 {
@@ -414,8 +417,13 @@ article h4 {
 
   article div > img:first-of-type {
     opacity: 1;
-  
   }
+
+  /* some space from the botton of a mobile device */
+  .main-content nav {
+    margin-bottom: 50px;
+  }
+
 }
 
 
