no photo opacity in tap devices

--- a/develop/assets/css/style.css
+++ b/develop/assets/css/style.css
@@ -415,7 +415,7 @@ article h4 {
     opacity: 1;
   }
 
-  article div > img:first-of-type {
+  article div a > img:first-of-type {
     opacity: 1;
   }
 
