fix top nav font size in big screens

--- a/develop/assets/css/style.css
+++ b/develop/assets/css/style.css
@@ -427,6 +427,13 @@ article h4 {
     margin-bottom: 50px;
   }
 /* media query 575px end */
+}
+/* fix nav font size for screens over 980px */
+@media screen and (min-width: 981px) {
+
+  header nav ul li a {
+    font-size: 16px;
+  }
 
 }
 
